--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 :root {
+  /* fontes */
   --ff-primary: 'Staatliches', cursive;
   --ff-segundary: 'Palanquin', sans-serif;
+  --ff-footer: 'Open Sans', sans-serif;
 
+  /* background-colors */
   --bg-primary: #EFF1FF;
   --bg-secundary: #8E9AAF;
   --bg-logo: #CBC0D3;
   --bg-text-card: #FEEAFA;
 
+  /* text color */
   --text-card: #4A4E69;
   --text-logo: #FFF;
 }
@@ -46,7 +50,13 @@ header img {
   margin: auto;
   width: 8.5625rem;
   height: 8.5625rem;
+  position: relative;
 }
+
+header #logod {
+  opacity: 0;
+  position: absolute;
+} 
 
 .logo-background {
   background-color: var(--bg-logo);
@@ -67,8 +77,7 @@ header img {
 }
 
 .main {
-  display: flex;
-  flex-direction: column;
+  display: grid;
 
   margin: 0.88rem auto 3.75rem auto;
 
@@ -90,15 +99,12 @@ header img {
   
 }
 
-.card {
+.card-wrapper {
   position: relative;
-}
-
-.card {
   margin-bottom: 2rem;
 }
 
-.card h2 {
+.card-wrapper h2 {
   position: absolute;
   right: 0;
   
@@ -118,12 +124,17 @@ header img {
   align-items: center;
 }
 
-.card img {
+.card-wrapper img {
   animation: cardtop 700ms 350ms backwards;
 }
 
-.card h2 {
+.card-wrapper h2 {
   animation: carddown 700ms 500ms backwards;
+}
+
+footer {
+  position: absolute;
+  opacity: 0;
 }
 
 
@@ -149,4 +160,131 @@ header img {
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+@media (min-width: 1100px) {
+
+  body {
+    display: grid;
+    grid-template-areas: 
+    "A B"
+    "A C";
+  }
+
+  body::before {
+    content: '';
+    width: 23.5625rem;
+    height: 100%;    
+    background: var(--bg-secundary);
+  }
+
+  header {
+    grid-area: A;
+    height: 0;
+    display: flex;
+    flex-direction: column;
+    
+    width: 23.5625rem;
+    position: relative;
+  }
+
+  header img {
+    opacity: 0;
+    position: absolute;
+  }
+
+  header #logod {
+    opacity: 1;
+    
+    margin: 2rem 5.1rem 2.31rem 5.06rem;
+    width: 13.40425rem;
+    height: 10.4375rem;
+    position: relative;
+  }
+
+  header::after {
+    content: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a rhoncus leo. Donec at scelerisque magna. Nullam vitae neque sit amet erat dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at quam aliquet, pharetra est in, sagittis lorem.elit. Donec a rhoncus leo. Donec at scelerisque magna. Nullam vitae neque sit amet erat dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at quam aliquet, pharetra est in, sagittis lorem.";
+
+    color: var(--text-logo);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.25rem;
+
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    
+    margin: auto 3rem 7.81rem 3.37rem;
+  }
+
+  .main p {
+    position: absolute;
+    opacity: 0;
+
+  }
+
+  .main {
+   grid-area: B;
+    
+    width: 46.0625rem;
+    height: 33.25rem;
+
+    margin: -1rem 14.25rem 3.12rem 29.63rem;
+  }
+
+  .cards {
+    display: grid;
+    grid-template-areas:
+      'D E F'
+      'G E I'
+      'G H I';
+    width: 100%;
+  }
+
+  .card-wrapper {
+    margin: 3.2rem;
+  }
+
+  .cards > .card-wrapper:nth-child(1) {
+    grid-area: D;
+  }
+
+  .cards > .card-wrapper:nth-child(2) {
+    grid-area: E;
+  }
+
+  .cards > .card-wrapper:nth-child(3) {
+    grid-area: H;
+  }
+
+  .cards > .card-wrapper:nth-child(4) {
+    grid-area: G;
+  }
+
+  .cards > .card-wrapper:nth-child(5) {
+    grid-area: F;
+  }
+
+  .cards > .card-wrapper:nth-child(6) {
+    grid-area: I;
+  }
+
+  footer {
+    position: static;
+    opacity: 1;
+
+    font-size: 1.4rem;
+    line-height: 2.8rem;
+    text-align: center;
+    color: var(--text-card);
+    font-family: var(--ff-footer);
+    margin: 22.67rem 0 0 36.01rem;
+  }
+  
+  footer p a {
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--text-card);
+  }
+  
+
 }
